fixed css grid on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ h1{
 .desktop-container{
     display: grid;
     height: 100%;
-    grid-template-columns: 20% 2fr 48% 10%;
+    grid-template-columns: 25% 2fr 45% 10%;
     grid-template-rows: repeat(2, 12.5%) repeat(3, 25%);
     border-color: black;
 }
@@ -66,7 +66,7 @@ h1{
 .story{
     z-index: 1;
     font-family: 'Noteworthy';
-    font-size: 21px;
+    font-size: 34px;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
@@ -129,24 +129,31 @@ h1{
 }
 
 .new-player-container{
-    grid-template-rows: repeat(5, 20%);
-    grid-template-columns: 10% auto 10%;
+    grid-template-rows: 10% 15% 15% 10% 5% 20% 20%;
+    grid-template-columns: 10% 1fr 1fr 1fr 10%;
+}
+
+.mobile-header-bubble{
+    grid-column: 2 / 5;
+    grid-row: 2 / 4;
+    width: 100%;
+    height: 100%;
 }
 
 .name-header{
-    grid-row: 2 / 3;
+    grid-row: 5 / 6;
     grid-column: 2 / 3;
 }
 
 .name-input{
-    grid-row: 3 / 4;
-    grid-column: 2 / 3;
-    height: 30%;
+    grid-row: 6 / 7;
+    grid-column: 2 / 5;
+    height: 33%;
 }
 
 .name-submit{
-    grid-row: 4 / 5;
-    grid-column: 2 / 3;
+    grid-row: 7 / 8;
+    grid-column: 3 / 5;
 }
 
 /* waiting for players to join screen */
